<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/nameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/amountToPayTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_amount_to_pay" />

    <TextView
        android:id="@+id/amountToReceiveTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_amount_to_receive" />


</LinearLayout>